--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: 'kanit';
-    background-image: url(/Picture/galaxy.jpg) ;
+    background-image: url(/Picture/galaxy.jpg) !important;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
